# advent2024

./: .gitignore  .rustfmt.toml  Cargo.toml
src/: challenge.rs  error.rs  input.rs  main.rs  select.rs
src/challenge/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  error.rs  mod.rs  solver.rs
src/input/: download.rs  error.rs  helpers.rs  input.rs  input_files.rs  mod.rs  simple.rs
