[package]
name = "aoc22"
author = "Carson Myers <carson@myers.se>"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
futures = "0.3.25"
itertools = "0.10.5"
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["json", "cookies"] }
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["full"] }
tokio-stream = "0.1.11"
url = "2.3.1"
