[package]
name = "aoc22"
authors = ["Carson Myers <carson@myers.se>"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
futures = "0.3.25"
itertools = "0.10.5"
paste = "1.0.15"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json", "cookies"] }
thiserror = "2.0.4"
tokio = { version = "1.22.0", features = ["full"] }
tokio-stream = "0.1.11"
url = "2.3.1"
winnow = "0.6.20"
